--- a/style.css
+++ b/style.css
@@ -74,3 +74,13 @@ label {
     border-radius: 5%;
     background: red;
 }
+
+#iniDataButton {
+    border-style: outset;
+    color: yellow;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 5%;
+    background: green;
+}
